[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nonebot-plugin-roblox-search"
version = "1.3.5"
description = "Roblox平台综合查询插件，支持用户/游戏/群组/好友粉丝列表查询"
authors = [
  { name = "MrMao", email = "admin@maoyyds.cn" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["nonebot2", "roblox", "onebot-v11", "查询", "游戏"]
dependencies = [
    "nonebot2>=2.2.0",
    "nonebot-adapter-onebot>=2.4.0",
    "python-dateutil>=2.8.2",
    "Pillow>=9.0.0",
    "requests>=2.20.0",
]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/maoyyds-cn/nonebot-plugin-roblox-search"
Repository = "https://github.com/maoyyds-cn/nonebot-plugin-roblox-search.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["nonebot_plugin_roblox_search"]

[project.entry-points."nonebot.plugin"]
nonebot_plugin_roblox_search = "nonebot_plugin_roblox_search"

[tool.nonebot]
plugins = ["nonebot_plugin_roblox_search"]
